--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.12.0",
     "react-native-uuid": "^2.0.3",
+    "react-native-vector-icons": "^10.2.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
